syntax = "proto3";

package ztcp.admin.v1;

option go_package = "zero-trust-control-plane/backend/api/generated/admin/v1;adminv1";

import "google/protobuf/timestamp.proto";

// SystemStats returns aggregate system-level metrics. Only for platform admins.
message SystemStats {
  int64 org_count = 1;
  int64 user_count = 2;
  int64 session_count = 3;
  int64 device_count = 4;
  google.protobuf.Timestamp computed_at = 5;
}

// GetSystemStatsRequest is empty.
message GetSystemStatsRequest {}

// GetSystemStatsResponse returns system stats.
message GetSystemStatsResponse {
  SystemStats stats = 1;
}

// AdminService handles system-level operations. Only for platform admins.
service AdminService {
  rpc GetSystemStats(GetSystemStatsRequest) returns (GetSystemStatsResponse);
}
